tests/baselines/reference/parserErrorRecovery_ParameterList2.errors.txt
parserErrorRecovery_ParameterList2.ts(1,10): error TS2391: Function implementation is missing or not immediately following the declaration.
parserErrorRecovery_ParameterList2.ts(2,2): error TS1005: ')' expected.


==== parserErrorRecovery_ParameterList2.ts (2 errors) ====
    function f(a, {
             ~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }
     
!!! error TS1005: ')' expected.